--- a/album-manager-front/package.json
+++ b/album-manager-front/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -26,7 +27,12 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react/prop-types": [
+        2
+      ]
+    }
   },
   "browserslist": {
     "production": [
